@@ -1,13 +1,0 @@
-This package was debianized by David Helder <dhelder@umich.edu> on
-Thu, 13 Jan 2000 10:48:35 -0500.
-
-It was downloaded from http://www.eecs.umich.edu/misc/gnet
-
-Upstream Author: David A. Helder
-
-This software is copyright (c) 2000 by David A. Helder.
-
-You are free to distribute this software under the terms of
-the GNU Lesser General Public License.
-On Debian systems, the complete text of the GNU Lesser General Public
-License can be found in /usr/share/common-licenses/LGPL file.
