@@ -1,9 +1,0 @@
-#!/bin/sh
-
-set -e
-
-if [ -d /usr/share/doc/libgnet-dev ]; then
-	rm -r /usr/share/doc/libgnet-dev 
-fi
-
-#DEBHELPER#
