@@ -1,1 +1,0 @@
-usr/lib/lib*.so.*
