@@ -1,87 +1,0 @@
-#!/usr/bin/make -f
-# Sample debian/rules that uses debhelper.
-# GNU copyright 1997 to 1999 by Joey Hess.
-
-# Uncomment this to turn on verbose mode.
-#export DH_VERBOSE=1
-
-# This is the debhelper compatability version to use.
-export DH_COMPAT=3
-
-SCRIPT_DIR = /usr/share/dbs
-
-VERSION = $(shell dpkg-parsechangelog | grep Version | sed -e 's/Version: //g' -e 's/-[A-Za-z0-9.]*$$//g')
-SONAME = 0
-TAG    = 2.0-$(SONAME)
-
-# the dbs rules
-TAR_DIR := gnet-${VERSION}
-include $(SCRIPT_DIR)/dbs-build.mk
-
-# dpkg-arch rules
-ifeq (,$(DEB_BUILD_GNU_TYPE))
-	include $(SCRIPT_DIR)/dpkg-arch.mk
-endif
-
-configure: $(STAMP_DIR)/configure
-$(STAMP_DIR)/configure: $(patched)
-	dh_testdir
-
-	cd $(BUILD_TREE) && ./configure --prefix=/usr \
-		--mandir=\$${prefix}/share/man \
-		--infodir=\$${prefix}/share/info 
-
-	touch $@
-
-build: configure $(STAMP_DIR)/build
-$(STAMP_DIR)/build:
-	dh_testdir
-
-	cd $(BUILD_TREE) && $(MAKE)
-
-	touch $@
-
-clean:
-	dh_testdir
-	rm -rf $(STAMP_DIR) build-tree*
-	perl $(SCRIPT_DIR)/dbs_split clean
-	dh_clean
-
-install: build
-	dh_testdir
-	dh_testroot
-	dh_clean -k -plibgnet-dev -plibgnet$(TAG)
-	dh_installdirs
-
-	cd $(BUILD_TREE) && $(MAKE) install prefix=$(CURDIR)/debian/libgnet-dev/usr
-	dh_movefiles -plibgnet$(TAG) --sourcedir=debian/libgnet-dev
-
-# Build architecture-independent files here.
-binary-indep: build install
-# We have nothing to do by default.
-
-# Build architecture-dependent files here.
-binary-arch: build install
-	dh_testdir
-	dh_testroot
-	dh_installdocs
-	dh_installdocs -plibgnet$(TAG) $(BUILD_TREE)/NEWS $(BUILD_TREE)/README $(BUILD_TREE)/TODO $(BUILD_TREE)/HACKING $(BUILD_TREE)/AUTHORS
-
-	dh_installexamples -plibgnet$(TAG) $(BUILD_TREE)/examples/*.[ch] $(BUILD_TREE)/examples/Makefile
-	dh_installchangelogs -plibgnet$(TAG) $(BUILD_TREE)/ChangeLog
-	rm -r $(CURDIR)/debian/libgnet-dev/usr/share/doc/libgnet-dev
-	dh_link -plibgnet-dev /usr/share/doc/libgnet$(TAG) /usr/share/doc/libgnet-dev
-	dh_strip
-	dh_compress
-	dh_fixperms
-# You may want to make some executables suid here.
-	dh_makeshlibs -plibgnet$(TAG) -V'libgnet$(TAG) (>= $(VERSION))'
-	cat debian/*/DEBIAN/shlibs > debian/shlibs.local
-	dh_installdeb
-	dh_shlibdeps
-	dh_gencontrol
-	dh_md5sums
-	dh_builddeb
-
-binary: binary-indep binary-arch
-.PHONY: build clean binary-indep binary-arch binary install configure
