@@ -1,217 +1,0 @@
-gnet (2.0.8-1) unstable; urgency=low
-
-  * New upstream release
-
- -- Tim-Philipp Müller <t.i.m@zen.co.uk>  Sun,  3 Feb 2008 18:30:00 +0000
-
-gnet (2.0.7-1) unstable; urgency=low
-
-  * New upstream release
-
- -- Takuo KITAME <kitame@debian.org>  Tue,  1 Mar 2005 16:28:14 +0900
-
-gnet (2.0.4-1) unstable; urgency=low
-
-  * New upstream release (closes: #223443, #223451)
-
- -- Takuo KITAME <kitame@debian.org>  Fri, 19 Dec 2003 14:29:15 +0900
-
-gnet (2.0.3-1) unstable; urgency=low
-
-  * New upstream release
-  * remove -L/usr/lib from gnet-2.0.pc (closes: #192358)
-
- -- Takuo KITAME <kitame@debian.org>  Thu, 22 May 2003 13:42:20 +0900
-
-gnet (2.0.2-1) unstable; urgency=low
-
-  * New upstream release (closes: #182047)
-  * debian/rules: fix version detection script (closes: #179054)
-
- -- Takuo KITAME <kitame@debian.org>  Tue,  6 May 2003 15:57:56 +0900
-
-gnet (2.0.0-1) unstable; urgency=low
-
-  * New upstream release
-
- -- Takuo KITAME <kitame@debian.org>  Mon, 21 Apr 2003 14:03:11 +0900
-
-gnet (1.1.7-3) unstable; urgency=low
-
-  * Don't use -Werror (closes: #170671, #171379, #170616)
-
- -- Takuo KITAME <kitame@debian.org>  Mon,  2 Dec 2002 12:24:00 +0900
-
-gnet (1.1.7-2) unstable; urgency=low
-
-  * really change maintainer address.
-
- -- Takuo KITAME <kitame@debian.org>  Sat, 30 Nov 2002 13:13:10 +0900
-
-gnet (1.1.7-1) unstable; urgency=low
-
-  * New upstream release
-  * change maintainer address to @debian.org
-  * include document for gnet-config (closes: #164143)
-  * glib1 binary was removed.
-
- -- Takuo KITAME <kitame@debian.org>  Mon, 25 Nov 2002 08:26:04 +0900
-
-gnet (1.1.4-1) unstable; urgency=low
-
-  * New upstream release
-  * compiled with both glib1 and glib2.
-    libgnet1.1 is compiled with glib2
-    If you need gnet with glib1, choose libgnet1.1-glib1 package.
-
- -- Takuo KITAME <kitame@northeye.org>  Thu, 16 May 2002 10:55:10 +0900
-
-gnet (1.1.3-1) unstable; urgency=low
-
-  * New upstream release
-  * use dbs
-  
- -- Takuo KITAME <kitame@northeye.org>  Fri, 26 Apr 2002 14:06:17 +0900
-
-gnet (1.1.2-1) unstable; urgency=low
-
-  * New upstream release
-
- -- Takuo KITAME <kitame@northeye.org>  Mon, 18 Feb 2002 11:04:52 +0900
-
-gnet (1.1.0-4) unstable; urgency=low
-
-  * debian/rules:
-    - install gnet-config
-    - move /usr/lib/gnet/include/* to /usr/include/gnet/
-
- -- Takuo KITAME <kitame@northeye.org>  Wed, 19 Dec 2001 14:45:04 +0900
-
-gnet (1.1.0-3) unstable; urgency=low
-
-  * debian/control:
-    - fixed typo in description (closes: #124962, #12496)
-
- -- Takuo KITAME <kitame@northeye.org>  Tue, 18 Dec 2001 08:19:34 +0900
-
-gnet (1.1.0-2) unstable; urgency=low
-
-  * libgnet1.1/libgnet-dev: Conflicts/Replaces: libgnet1 (closes: #115222)
-
- -- Takuo KITAME <kitame@northeye.org>  Fri, 12 Oct 2001 01:33:06 +0900
-
-gnet (1.1.0-1) unstable; urgency=low
-
-  * New upstream release (closes: #114758, #87011)
-  * New Maintainer release (closes: #95072)
-  * fix build problem (closes: #105909)
-  * fix build-depends (closes: #104311)
-  * rename libgnet1 to libgnet1.1 like libglib1.2 (closes: #88443)
-  * fix #92604: libgnet-dev: /usr/include/gnet/gnet.h includes gnetconfig.h, but it doesn't exist (closes: #92604)
-  * fix create bogus directories (closes: #107770)
-  * DH_COMPAT=3, Standards-Version: 3.5.2.0
-
- -- Takuo KITAME <kitame@northeye.org>  Mon,  8 Oct 2001 04:45:27 +0900
-
-gnet (1.0.3-2.1) unstable; urgency=low
-
-  * Run libtoolize to get support for new architectures.  Closes: #95072
-
- -- LaMont Jones <lamont@debian.org>  Mon,  9 Jul 2001 21:39:34 -0600
-
-gnet (1.0.3-2) unstable; urgency=low
-
-  * recompiled for woody.
-  * renamed lignet1.0-dev into libgnet-dev and libgnet1.0 into libgnet1.
-
- -- Vincent Renardias <vincent@debian.org>  Mon, 15 May 2000 15:46:38 +0200
-
-gnet (1.0.3-1) unstable; urgency=low
-
-  * New upstream release
-
- -- David Helder <dhelder@umich.edu>  Tue, 11 Apr 2000 16:54:33 -0400
-
-gnet (1.0.2-1) unstable; urgency=low
-
-  * New upstream release
-
- -- David Helder <dhelder@umich.edu>  Sun,  9 Apr 2000 16:21:50 -0400
-
-gnet (1.0.1-1) unstable; urgency=low
-
-  * New upstream release
-
- -- David Helder <dhelder@umich.edu>  Sun,  5 Mar 2000 14:23:04 -0500
-
-gnet (1.0.0-2) unstable; urgency=low
-
-  * Added "Replaces: libgnet0.1 
-  * Fixed control file
-
- -- David Helder <dhelder@umich.edu>  Mon, 28 Feb 2000 13:25:01 -0500
-
-gnet (1.0.0-1) unstable; urgency=low
-
-  * New upstream release
-  * Cleaned up control file, added 1.0 files
-
- -- David Helder <dhelder@umich.edu>  Mon, 28 Feb 2000 12:41:22 -0500
-
-gnet (0.1.9-1) unstable; urgency=low
-
-  * New upstream release
-
- -- David Helder <dhelder@umich.edu>  Tue, 15 Feb 2000 10:26:21 -0500
-
-gnet (0.1.8-2) unstable; urgency=low
-
-  * Fixed documentation
-
- -- David Helder <dhelder@umich.edu>  Wed,  2 Feb 2000 10:13:08 -0500
-
-gnet (0.1.8-1) unstable; urgency=low
-
-  * New upstream release
-
- -- David Helder <dhelder@umich.edu>  Tue,  1 Feb 2000 19:59:53 -0500
-
-gnet (0.1.7-1) unstable; urgency=low
-
-  * New upstream release
-
- -- David Helder <dhelder@umich.edu>  Tue, 25 Jan 2000 14:33:00 -0500
-
-gnet (0.1.6-1) unstable; urgency=low
-    
-  * New upstream release
-  
- -- David Helder <dhelder@umich.edu>  Sun, 23 Jan 2000 14:19:58 -0500
-  
-gnet (0.1.5-2) unstable; urgency=low
-    
-  * Removed libgnet0.1.shlibs.  I don't understand it... 
-  
- -- David Helder <dhelder@umich.edu>  Wed, 19 Jan 2000 22:58:11 -0500
-  
-gnet (0.1.5-1) unstable; urgency=low
-
-  * New upstream release
-  * README, etc moved to libgnet0.1 package
-  * Fixed libtoolisms in rules
-
- -- David Helder <dhelder@umich.edu>  Tue, 18 Jan 2000 12:46:59 -0500
-    
-gnet (0.1.4-2) unstable; urgency=low
-
-  * Fixed examples
-
- -- David Helder <dhelder@umich.edu>  Thu, 13 Jan 2000 10:48:35 -0500
-
-gnet (0.1.4-1) unstable; urgency=low
-
-  * Initial Release.
-
- -- David Helder <dhelder@umich.edu>  Thu, 13 Jan 2000 10:48:35 -0500
-
-
